--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "tap": "^6.2.0"
   },
   "scripts": {
-    "test": "tap test.js"
+    "test": "tap test.js",
+    "coverage": "npm test -- --cov --coverage-report=lcov"
   },
   "repository": {
     "type": "git",
