--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "identifier",
     "object",
     "objectid",
+    "document",
+    "documentid",
     "fast",
     "performant",
     "efficient"
